testsuite/poke.pkl/printf-diag-4.pk
/* { dg-do compile } */

printf "%i32x %i32x", 1; /* { dg-error "" } */
